parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    CASE
    END
    SWITCH

Grammar

Rule 0     S' -> programa
Rule 1     programa -> MAIN LBRACE listaDeclaracion RBRACE
Rule 2     listaDeclaracion -> listaDeclaracion declaracion
Rule 3     listaDeclaracion -> declaracion
Rule 4     declaracion -> declaracionVariable
Rule 5     declaracion -> listaSentencias
Rule 6     declaracionVariable -> tipo listaIdentificadores SEMICOLON
Rule 7     declaracionVariable -> tipo ID EQUAL expresion SEMICOLON
Rule 8     listaIdentificadores -> ID
Rule 9     listaIdentificadores -> ID COMMA listaIdentificadores
Rule 10    tipo -> INT
Rule 11    tipo -> INTEGER
Rule 12    tipo -> FLOAT
Rule 13    tipo -> CHAR
Rule 14    tipo -> STRING
Rule 15    tipo -> BOOLEAN
Rule 16    tipo -> DOUBLE
Rule 17    listaSentencias -> listaSentencias sentencia
Rule 18    listaSentencias -> sentencia
Rule 19    listaSentencias -> empty
Rule 20    sentencia -> seleccion
Rule 21    sentencia -> iteracion
Rule 22    sentencia -> repeticion
Rule 23    sentencia -> andor
Rule 24    sentencia -> elseif
Rule 25    sentencia -> sentIn
Rule 26    sentencia -> sentOut
Rule 27    sentencia -> asignacion
Rule 28    sentencia -> incremento
Rule 29    asignacion -> ID EQUAL sentExpresion
Rule 30    asignacion -> ID DEQUAL sentExpresion
Rule 31    incremento -> ID PLUSPLUS SEMICOLON
Rule 32    incremento -> ID MINUSMINUS SEMICOLON
Rule 33    sentExpresion -> expresion SEMICOLON
Rule 34    sentExpresion -> incremento SEMICOLON
Rule 35    sentExpresion -> SEMICOLON
Rule 36    seleccion -> IF expresion LBRACE listaSentencias RBRACE
Rule 37    seleccion -> IF expresion LBRACE listaSentencias RBRACE elseif
Rule 38    seleccion -> IF LPAREN andor RPAREN LBRACE listaSentencias RBRACE
Rule 39    seleccion -> IF LPAREN andor RPAREN LBRACE listaSentencias RBRACE elseif
Rule 40    elseif -> ELSE LBRACE listaSentencias RBRACE
Rule 41    andor -> expresion AND expresion
Rule 42    andor -> expresion OR expresion
Rule 43    iteracion -> WHILE expresion
Rule 44    iteracion -> WHILE expresion LBRACE listaSentencias RBRACE
Rule 45    repeticion -> DO LBRACE listaSentencias RBRACE iteracion
Rule 46    sentIn -> CIN ID SEMICOLON
Rule 47    sentOut -> COUT expresion SEMICOLON
Rule 48    expresion -> expresionSimple
Rule 49    expresion -> expresionSimple relacionOp expresionSimple
Rule 50    relacionOp -> LESS
Rule 51    relacionOp -> LESSEQUAL
Rule 52    relacionOp -> GREATER
Rule 53    relacionOp -> GREATEREQUAL
Rule 54    relacionOp -> DEQUAL
Rule 55    relacionOp -> NEQUAL
Rule 56    expresionSimple -> expresionSimple sumaOp termino
Rule 57    expresionSimple -> termino
Rule 58    sumaOp -> PLUS
Rule 59    sumaOp -> MINUS
Rule 60    termino -> termino mulOp factor
Rule 61    termino -> factor
Rule 62    mulOp -> TIMES
Rule 63    mulOp -> DIVIDE
Rule 64    mulOp -> MOD
Rule 65    factor -> factor POWER primario
Rule 66    factor -> primario
Rule 67    primario -> LPAREN expresion RPAREN
Rule 68    primario -> ID
Rule 69    primario -> NUMBER
Rule 70    empty -> <empty>

Terminals, with rules where they appear

AND                  : 41
BOOLEAN              : 15
CASE                 : 
CHAR                 : 13
CIN                  : 46
COMMA                : 9
COUT                 : 47
DEQUAL               : 30 54
DIVIDE               : 63
DO                   : 45
DOUBLE               : 16
ELSE                 : 40
END                  : 
EQUAL                : 7 29
FLOAT                : 12
GREATER              : 52
GREATEREQUAL         : 53
ID                   : 7 8 9 29 30 31 32 46 68
IF                   : 36 37 38 39
INT                  : 10
INTEGER              : 11
LBRACE               : 1 36 37 38 39 40 44 45
LESS                 : 50
LESSEQUAL            : 51
LPAREN               : 38 39 67
MAIN                 : 1
MINUS                : 59
MINUSMINUS           : 32
MOD                  : 64
NEQUAL               : 55
NUMBER               : 69
OR                   : 42
PLUS                 : 58
PLUSPLUS             : 31
POWER                : 65
RBRACE               : 1 36 37 38 39 40 44 45
RPAREN               : 38 39 67
SEMICOLON            : 6 7 31 32 33 34 35 46 47
STRING               : 14
SWITCH               : 
TIMES                : 62
WHILE                : 43 44
error                : 

Nonterminals, with rules where they appear

andor                : 23 38 39
asignacion           : 27
declaracion          : 2 3
declaracionVariable  : 4
elseif               : 24 37 39
empty                : 19
expresion            : 7 33 36 37 41 41 42 42 43 44 47 67
expresionSimple      : 48 49 49 56
factor               : 60 61 65
incremento           : 28 34
iteracion            : 21 45
listaDeclaracion     : 1 2
listaIdentificadores : 6 9
listaSentencias      : 5 17 36 37 38 39 40 44 45
mulOp                : 60
primario             : 65 66
programa             : 0
relacionOp           : 49
repeticion           : 22
seleccion            : 20
sentExpresion        : 29 30
sentIn               : 25
sentOut              : 26
sentencia            : 17 18
sumaOp               : 56
termino              : 56 57 60
tipo                 : 6 7

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . MAIN LBRACE listaDeclaracion RBRACE

    MAIN            shift and go to state 2

    programa                       shift and go to state 1

state 1

    (0) S' -> programa .



state 2

    (1) programa -> MAIN . LBRACE listaDeclaracion RBRACE

    LBRACE          shift and go to state 3


state 3

    (1) programa -> MAIN LBRACE . listaDeclaracion RBRACE
    (2) listaDeclaracion -> . listaDeclaracion declaracion
    (3) listaDeclaracion -> . declaracion
    (4) declaracion -> . declaracionVariable
    (5) declaracion -> . listaSentencias
    (6) declaracionVariable -> . tipo listaIdentificadores SEMICOLON
    (7) declaracionVariable -> . tipo ID EQUAL expresion SEMICOLON
    (17) listaSentencias -> . listaSentencias sentencia
    (18) listaSentencias -> . sentencia
    (19) listaSentencias -> . empty
    (10) tipo -> . INT
    (11) tipo -> . INTEGER
    (12) tipo -> . FLOAT
    (13) tipo -> . CHAR
    (14) tipo -> . STRING
    (15) tipo -> . BOOLEAN
    (16) tipo -> . DOUBLE
    (20) sentencia -> . seleccion
    (21) sentencia -> . iteracion
    (22) sentencia -> . repeticion
    (23) sentencia -> . andor
    (24) sentencia -> . elseif
    (25) sentencia -> . sentIn
    (26) sentencia -> . sentOut
    (27) sentencia -> . asignacion
    (28) sentencia -> . incremento
    (70) empty -> .
    (36) seleccion -> . IF expresion LBRACE listaSentencias RBRACE
    (37) seleccion -> . IF expresion LBRACE listaSentencias RBRACE elseif
    (38) seleccion -> . IF LPAREN andor RPAREN LBRACE listaSentencias RBRACE
    (39) seleccion -> . IF LPAREN andor RPAREN LBRACE listaSentencias RBRACE elseif
    (43) iteracion -> . WHILE expresion
    (44) iteracion -> . WHILE expresion LBRACE listaSentencias RBRACE
    (45) repeticion -> . DO LBRACE listaSentencias RBRACE iteracion
    (41) andor -> . expresion AND expresion
    (42) andor -> . expresion OR expresion
    (40) elseif -> . ELSE LBRACE listaSentencias RBRACE
    (46) sentIn -> . CIN ID SEMICOLON
    (47) sentOut -> . COUT expresion SEMICOLON
    (29) asignacion -> . ID EQUAL sentExpresion
    (30) asignacion -> . ID DEQUAL sentExpresion
    (31) incremento -> . ID PLUSPLUS SEMICOLON
    (32) incremento -> . ID MINUSMINUS SEMICOLON
    (48) expresion -> . expresionSimple
    (49) expresion -> . expresionSimple relacionOp expresionSimple
    (56) expresionSimple -> . expresionSimple sumaOp termino
    (57) expresionSimple -> . termino
    (60) termino -> . termino mulOp factor
    (61) termino -> . factor
    (65) factor -> . factor POWER primario
    (66) factor -> . primario
    (67) primario -> . LPAREN expresion RPAREN
    (68) primario -> . ID
    (69) primario -> . NUMBER

  ! shift/reduce conflict for INT resolved as shift
  ! shift/reduce conflict for INTEGER resolved as shift
  ! shift/reduce conflict for FLOAT resolved as shift
  ! shift/reduce conflict for CHAR resolved as shift
  ! shift/reduce conflict for STRING resolved as shift
  ! shift/reduce conflict for BOOLEAN resolved as shift
  ! shift/reduce conflict for DOUBLE resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for WHILE resolved as shift
  ! shift/reduce conflict for DO resolved as shift
  ! shift/reduce conflict for ELSE resolved as shift
  ! shift/reduce conflict for CIN resolved as shift
  ! shift/reduce conflict for COUT resolved as shift
  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for LPAREN resolved as shift
  ! shift/reduce conflict for NUMBER resolved as shift
    INT             shift and go to state 13
    INTEGER         shift and go to state 14
    FLOAT           shift and go to state 15
    CHAR            shift and go to state 16
    STRING          shift and go to state 17
    BOOLEAN         shift and go to state 18
    DOUBLE          shift and go to state 19
    RBRACE          reduce using rule 70 (empty -> .)
    IF              shift and go to state 29
    WHILE           shift and go to state 31
    DO              shift and go to state 32
    ELSE            shift and go to state 33
    CIN             shift and go to state 34
    COUT            shift and go to state 35
    ID              shift and go to state 9
    LPAREN          shift and go to state 30
    NUMBER          shift and go to state 40

  ! IF              [ reduce using rule 70 (empty -> .) ]
  ! WHILE           [ reduce using rule 70 (empty -> .) ]
  ! DO              [ reduce using rule 70 (empty -> .) ]
  ! ELSE            [ reduce using rule 70 (empty -> .) ]
  ! CIN             [ reduce using rule 70 (empty -> .) ]
  ! COUT            [ reduce using rule 70 (empty -> .) ]
  ! ID              [ reduce using rule 70 (empty -> .) ]
  ! LPAREN          [ reduce using rule 70 (empty -> .) ]
  ! NUMBER          [ reduce using rule 70 (empty -> .) ]
  ! INT             [ reduce using rule 70 (empty -> .) ]
  ! INTEGER         [ reduce using rule 70 (empty -> .) ]
  ! FLOAT           [ reduce using rule 70 (empty -> .) ]
  ! CHAR            [ reduce using rule 70 (empty -> .) ]
  ! STRING          [ reduce using rule 70 (empty -> .) ]
  ! BOOLEAN         [ reduce using rule 70 (empty -> .) ]
  ! DOUBLE          [ reduce using rule 70 (empty -> .) ]

    listaDeclaracion               shift and go to state 4
    declaracion                    shift and go to state 5
    declaracionVariable            shift and go to state 6
    listaSentencias                shift and go to state 7
    tipo                           shift and go to state 8
    expresion                      shift and go to state 10
    sentencia                      shift and go to state 11
    empty                          shift and go to state 12
    seleccion                      shift and go to state 20
    iteracion                      shift and go to state 21
    repeticion                     shift and go to state 22
    andor                          shift and go to state 23
    elseif                         shift and go to state 24
    sentIn                         shift and go to state 25
    sentOut                        shift and go to state 26
    asignacion                     shift and go to state 27
    incremento                     shift and go to state 28
    expresionSimple                shift and go to state 36
    termino                        shift and go to state 37
    factor                         shift and go to state 38
    primario                       shift and go to state 39

state 4

    (1) programa -> MAIN LBRACE listaDeclaracion . RBRACE
    (2) listaDeclaracion -> listaDeclaracion . declaracion
    (4) declaracion -> . declaracionVariable
    (5) declaracion -> . listaSentencias
    (6) declaracionVariable -> . tipo listaIdentificadores SEMICOLON
    (7) declaracionVariable -> . tipo ID EQUAL expresion SEMICOLON
    (17) listaSentencias -> . listaSentencias sentencia
    (18) listaSentencias -> . sentencia
    (19) listaSentencias -> . empty
    (10) tipo -> . INT
    (11) tipo -> . INTEGER
    (12) tipo -> . FLOAT
    (13) tipo -> . CHAR
    (14) tipo -> . STRING
    (15) tipo -> . BOOLEAN
    (16) tipo -> . DOUBLE
    (20) sentencia -> . seleccion
    (21) sentencia -> . iteracion
    (22) sentencia -> . repeticion
    (23) sentencia -> . andor
    (24) sentencia -> . elseif
    (25) sentencia -> . sentIn
    (26) sentencia -> . sentOut
    (27) sentencia -> . asignacion
    (28) sentencia -> . incremento
    (70) empty -> .
    (36) seleccion -> . IF expresion LBRACE listaSentencias RBRACE
    (37) seleccion -> . IF expresion LBRACE listaSentencias RBRACE elseif
    (38) seleccion -> . IF LPAREN andor RPAREN LBRACE listaSentencias RBRACE
    (39) seleccion -> . IF LPAREN andor RPAREN LBRACE listaSentencias RBRACE elseif
    (43) iteracion -> . WHILE expresion
    (44) iteracion -> . WHILE expresion LBRACE listaSentencias RBRACE
    (45) repeticion -> . DO LBRACE listaSentencias RBRACE iteracion
    (41) andor -> . expresion AND expresion
    (42) andor -> . expresion OR expresion
    (40) elseif -> . ELSE LBRACE listaSentencias RBRACE
    (46) sentIn -> . CIN ID SEMICOLON
    (47) sentOut -> . COUT expresion SEMICOLON
    (29) asignacion -> . ID EQUAL sentExpresion
    (30) asignacion -> . ID DEQUAL sentExpresion
    (31) incremento -> . ID PLUSPLUS SEMICOLON
    (32) incremento -> . ID MINUSMINUS SEMICOLON
    (48) expresion -> . expresionSimple
    (49) expresion -> . expresionSimple relacionOp expresionSimple
    (56) expresionSimple -> . expresionSimple sumaOp termino
    (57) expresionSimple -> . termino
    (60) termino -> . termino mulOp factor
    (61) termino -> . factor
    (65) factor -> . factor POWER primario
    (66) factor -> . primario
    (67) primario -> . LPAREN expresion RPAREN
    (68) primario -> . ID
    (69) primario -> . NUMBER

  ! shift/reduce conflict for RBRACE resolved as shift
  ! shift/reduce conflict for INT resolved as shift
  ! shift/reduce conflict for INTEGER resolved as shift
  ! shift/reduce conflict for FLOAT resolved as shift
  ! shift/reduce conflict for CHAR resolved as shift
  ! shift/reduce conflict for STRING resolved as shift
  ! shift/reduce conflict for BOOLEAN resolved as shift
  ! shift/reduce conflict for DOUBLE resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for WHILE resolved as shift
  ! shift/reduce conflict for DO resolved as shift
  ! shift/reduce conflict for ELSE resolved as shift
  ! shift/reduce conflict for CIN resolved as shift
  ! shift/reduce conflict for COUT resolved as shift
  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for LPAREN resolved as shift
  ! shift/reduce conflict for NUMBER resolved as shift
    RBRACE          shift and go to state 41
    INT             shift and go to state 13
    INTEGER         shift and go to state 14
    FLOAT           shift and go to state 15
    CHAR            shift and go to state 16
    STRING          shift and go to state 17
    BOOLEAN         shift and go to state 18
    DOUBLE          shift and go to state 19
    IF              shift and go to state 29
    WHILE           shift and go to state 31
    DO              shift and go to state 32
    ELSE            shift and go to state 33
    CIN             shift and go to state 34
    COUT            shift and go to state 35
    ID              shift and go to state 9
    LPAREN          shift and go to state 30
    NUMBER          shift and go to state 40

  ! IF              [ reduce using rule 70 (empty -> .) ]
  ! WHILE           [ reduce using rule 70 (empty -> .) ]
  ! DO              [ reduce using rule 70 (empty -> .) ]
  ! ELSE            [ reduce using rule 70 (empty -> .) ]
  ! CIN             [ reduce using rule 70 (empty -> .) ]
  ! COUT            [ reduce using rule 70 (empty -> .) ]
  ! ID              [ reduce using rule 70 (empty -> .) ]
  ! LPAREN          [ reduce using rule 70 (empty -> .) ]
  ! NUMBER          [ reduce using rule 70 (empty -> .) ]
  ! RBRACE          [ reduce using rule 70 (empty -> .) ]
  ! INT             [ reduce using rule 70 (empty -> .) ]
  ! INTEGER         [ reduce using rule 70 (empty -> .) ]
  ! FLOAT           [ reduce using rule 70 (empty -> .) ]
  ! CHAR            [ reduce using rule 70 (empty -> .) ]
  ! STRING          [ reduce using rule 70 (empty -> .) ]
  ! BOOLEAN         [ reduce using rule 70 (empty -> .) ]
  ! DOUBLE          [ reduce using rule 70 (empty -> .) ]

    declaracion                    shift and go to state 42
    declaracionVariable            shift and go to state 6
    listaSentencias                shift and go to state 7
    tipo                           shift and go to state 8
    expresion                      shift and go to state 10
    sentencia                      shift and go to state 11
    empty                          shift and go to state 12
    seleccion                      shift and go to state 20
    iteracion                      shift and go to state 21
    repeticion                     shift and go to state 22
    andor                          shift and go to state 23
    elseif                         shift and go to state 24
    sentIn                         shift and go to state 25
    sentOut                        shift and go to state 26
    asignacion                     shift and go to state 27
    incremento                     shift and go to state 28
    expresionSimple                shift and go to state 36
    termino                        shift and go to state 37
    factor                         shift and go to state 38
    primario                       shift and go to state 39

state 5

    (3) listaDeclaracion -> declaracion .

    RBRACE          reduce using rule 3 (listaDeclaracion -> declaracion .)
    INT             reduce using rule 3 (listaDeclaracion -> declaracion .)
    INTEGER         reduce using rule 3 (listaDeclaracion -> declaracion .)
    FLOAT           reduce using rule 3 (listaDeclaracion -> declaracion .)
    CHAR            reduce using rule 3 (listaDeclaracion -> declaracion .)
    STRING          reduce using rule 3 (listaDeclaracion -> declaracion .)
    BOOLEAN         reduce using rule 3 (listaDeclaracion -> declaracion .)
    DOUBLE          reduce using rule 3 (listaDeclaracion -> declaracion .)
    IF              reduce using rule 3 (listaDeclaracion -> declaracion .)
    WHILE           reduce using rule 3 (listaDeclaracion -> declaracion .)
    DO              reduce using rule 3 (listaDeclaracion -> declaracion .)
    ELSE            reduce using rule 3 (listaDeclaracion -> declaracion .)
    CIN             reduce using rule 3 (listaDeclaracion -> declaracion .)
    COUT            reduce using rule 3 (listaDeclaracion -> declaracion .)
    ID              reduce using rule 3 (listaDeclaracion -> declaracion .)
    LPAREN          reduce using rule 3 (listaDeclaracion -> declaracion .)
    NUMBER          reduce using rule 3 (listaDeclaracion -> declaracion .)


state 6

    (4) declaracion -> declaracionVariable .

    RBRACE          reduce using rule 4 (declaracion -> declaracionVariable .)
    INT             reduce using rule 4 (declaracion -> declaracionVariable .)
    INTEGER         reduce using rule 4 (declaracion -> declaracionVariable .)
    FLOAT           reduce using rule 4 (declaracion -> declaracionVariable .)
    CHAR            reduce using rule 4 (declaracion -> declaracionVariable .)
    STRING          reduce using rule 4 (declaracion -> declaracionVariable .)
    BOOLEAN         reduce using rule 4 (declaracion -> declaracionVariable .)
    DOUBLE          reduce using rule 4 (declaracion -> declaracionVariable .)
    IF              reduce using rule 4 (declaracion -> declaracionVariable .)
    WHILE           reduce using rule 4 (declaracion -> declaracionVariable .)
    DO              reduce using rule 4 (declaracion -> declaracionVariable .)
    ELSE            reduce using rule 4 (declaracion -> declaracionVariable .)
    CIN             reduce using rule 4 (declaracion -> declaracionVariable .)
    COUT            reduce using rule 4 (declaracion -> declaracionVariable .)
    ID              reduce using rule 4 (declaracion -> declaracionVariable .)
    LPAREN          reduce using rule 4 (declaracion -> declaracionVariable .)
    NUMBER          reduce using rule 4 (declaracion -> declaracionVariable .)


state 7

    (5) declaracion -> listaSentencias .
    (17) listaSentencias -> listaSentencias . sentencia
    (20) sentencia -> . seleccion
    (21) sentencia -> . iteracion
    (22) sentencia -> . repeticion
    (23) sentencia -> . andor
    (24) sentencia -> . elseif
    (25) sentencia -> . sentIn
    (26) sentencia -> . sentOut
    (27) sentencia -> . asignacion
    (28) sentencia -> . incremento
    (36) seleccion -> . IF expresion LBRACE listaSentencias RBRACE
    (37) seleccion -> . IF expresion LBRACE listaSentencias RBRACE elseif
    (38) seleccion -> . IF LPAREN andor RPAREN LBRACE listaSentencias RBRACE
    (39) seleccion -> . IF LPAREN andor RPAREN LBRACE listaSentencias RBRACE elseif
    (43) iteracion -> . WHILE expresion
    (44) iteracion -> . WHILE expresion LBRACE listaSentencias RBRACE
    (45) repeticion -> . DO LBRACE listaSentencias RBRACE iteracion
    (41) andor -> . expresion AND expresion
    (42) andor -> . expresion OR expresion
    (40) elseif -> . ELSE LBRACE listaSentencias RBRACE
    (46) sentIn -> . CIN ID SEMICOLON
    (47) sentOut -> . COUT expresion SEMICOLON
    (29) asignacion -> . ID EQUAL sentExpresion
    (30) asignacion -> . ID DEQUAL sentExpresion
    (31) incremento -> . ID PLUSPLUS SEMICOLON
    (32) incremento -> . ID MINUSMINUS SEMICOLON
    (48) expresion -> . expresionSimple
    (49) expresion -> . expresionSimple relacionOp expresionSimple
    (56) expresionSimple -> . expresionSimple sumaOp termino
    (57) expresionSimple -> . termino
    (60) termino -> . termino mulOp factor
    (61) termino -> . factor
    (65) factor -> . factor POWER primario
    (66) factor -> . primario
    (67) primario -> . LPAREN expresion RPAREN
    (68) primario -> . ID
    (69) primario -> . NUMBER

  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for WHILE resolved as shift
  ! shift/reduce conflict for DO resolved as shift
  ! shift/reduce conflict for ELSE resolved as shift
  ! shift/reduce conflict for CIN resolved as shift
  ! shift/reduce conflict for COUT resolved as shift
  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for LPAREN resolved as shift
  ! shift/reduce conflict for NUMBER resolved as shift
    RBRACE          reduce using rule 5 (declaracion -> listaSentencias .)
    INT             reduce using rule 5 (declaracion -> listaSentencias .)
    INTEGER         reduce using rule 5 (declaracion -> listaSentencias .)
    FLOAT           reduce using rule 5 (declaracion -> listaSentencias .)
    CHAR            reduce using rule 5 (declaracion -> listaSentencias .)
    STRING          reduce using rule 5 (declaracion -> listaSentencias .)
    BOOLEAN         reduce using rule 5 (declaracion -> listaSentencias .)
    DOUBLE          reduce using rule 5 (declaracion -> listaSentencias .)
    IF              shift and go to state 29
    WHILE           shift and go to state 31
    DO              shift and go to state 32
    ELSE            shift and go to state 33
    CIN             shift and go to state 34
    COUT            shift and go to state 35
    ID              shift and go to state 9
    LPAREN          shift and go to state 30
    NUMBER          shift and go to state 40
